@@ -9,6 +9,7 @@ Version 1.1.1 to be released
 - Enh: Refactored the blog demo to make use of the new CActiveForm and the filtering feature of CGridView (Qiang)
 - Enh: Added filtering support for the crud code generator (Qiang)
 - Enh: Added search support for the crud code generator (Qiang)
+- Enh: Improved CHtml::beginForm() to auto-generate hidden fields for a GET form whose action contains query string (Qiang)
 - New: Added CActiveForm that performs model validations via AJAX (Qiang)
 
 Version 1.1.0 January 10, 2010
